# opengl

./: CMakeLists.txt  README.md
rendering-engine/rendering-engine/shaders/: lightbulb.frag  phong.vert
rendering-engine/rendering-engine/src/: Mesh.h  Renderer.h  Shader.cpp
rendering-engine/src/: Camera.cpp  Camera.h  Mesh.cpp  Renderer.cpp  main.cpp
shaders/: phong.frag
src/: Shader.h
